bottom nav bar ui alignment issue fixed

--- a/src/app/core/bottomnavbar/bottomnavbar.component.css
+++ b/src/app/core/bottomnavbar/bottomnavbar.component.css
@@ -1,10 +1,3 @@
-.copyright-css{
-    color: #9eb1fb;
-    position: absolute;
-    left: 759px;
-    margin-top: -2px;
-    font-size: 15px;
-}
 .customCss {
     position: relative;
     bottom: -81px;
